--- a/css-exercises/flex/04-flex-information/style.css
+++ b/css-exercises/flex/04-flex-information/style.css
@@ -24,3 +24,30 @@ img {
     justify-content: center;
     background: #eee;
   }
+
+/*Solution*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 32px;
+ } 
+
+.content {
+    display: flex;
+    column-gap: 52px;
+}
+
+.plants {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    max-width: 200px;
+}
