--- a/css-exercises/flex/05-flex-modal/style.css
+++ b/css-exercises/flex/05-flex-modal/style.css
@@ -64,3 +64,40 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Solution */
+
+.header {
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.modal {
+  display: flex;
+  padding: 15px;
+  gap: 15px;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header-cls-btn {
+  display: flex;
+  justify-content: space-between;
+}
+
+.icon, .close-button {
+    flex-shrink: 0;
+}
+
+button.continue, button.cancel {
+    align-self: flex-end;
+}
+
+.btns {
+    display: flex;
+    gap: 5px;
+}
