--- a/css-exercises/flex/07-flex-layout-2/style.css
+++ b/css-exercises/flex/07-flex-layout-2/style.css
@@ -28,3 +28,62 @@ body {
     border-radius: 4px;
   }
 
+/* Solution */
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header {
+    font-size: 32px;
+    font-weight: 900;
+    padding-left: 16px;
+    display: flex;
+    align-items: center;
+}
+
+.main {
+    display: flex;
+    flex: 1;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    color: white;
+    font-size: 24px;
+}
+
+.sidebar {
+    width: 300px;
+    flex-shrink: 0;
+    padding: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.cards {
+    padding: 32px;
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    gap: 32px;
+}
+
+.card {
+    width: 300px;
+    height: 300px;
+    padding: 12px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
